# MPL-Data-Cast

./: .gitignore  .readthedocs.yml  CHANGELOG  MANIFEST.in  README.rst  pyproject.toml  setup.py
.github/workflows/: check.yml  deploy_github.yml  deploy_pypi.yml
build-recipes/: MPLDataCast.icns  MPLDataCastLauncher.py  MPLDataCastLauncherCLI.py  Readme.md  hook-mpl-data-cast.py  macos_MPLDataCast.spec  macos_build_app.sh  win_MPLDataCast.spec  win_environment.iss  win_make_iss.py  win_mpl-data-cast.iss_dummy  win_mpl-data-cast.spec
docs/: README.md  conf.py  index.rst  requirements.txt  sec_cli.rst  sec_gui.rst  sec_intro.rst
docs/scrots/: make_scrots_ui.py
mpl_data_cast/: __init__.py  __main__.py  cli.py  helper.py  path_tree.py  pipeline.py  recipe.py  util.py  wait_cursor.py
mpl_data_cast/cli/: cli.py
mpl_data_cast/core/: converter.py
mpl_data_cast/gui/: __init__.py  __main__.py  main.py  main.ui  preferences.py  preferences.ui  splash.py  widget_input.py  widget_input.ui  widget_output.py  widget_output.ui  widget_tree.py  widget_tree.ui
mpl_data_cast/mod_recipes/: __init__.py  rcp_catchall.py  rcp_oah.py  rcp_qlsi.py  rcp_rtdc.py
mpl_data_cast/modalities/: __init__.py  oah.py  qlsi.py  rtdc.py
tests/: README.md  helper.py  test_gui_basic.py  test_gui_rtdc.py  test_path_tree.py  test_pipeline.py  test_rcp_catchall.py  test_rcp_rtdc.py  test_recipe.py
